--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,7 +8,8 @@
     "start": "yarn node dist/index.js",
     "dev": "nodemon",
     "tsc": "tsc --noEmit",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "migration": "ts-node src/config/migrations/runMigrations.ts"
   },
   "dependencies": {
     "@types/pg": "^8.11.11",
